5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1635_2446.log
== TEST (2019-04-10 13:40:44) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=2*1+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=2*1+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:40:59) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:02) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:02) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:03) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:03) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:04) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:04) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:04) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:04) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:05) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:05) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:05) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:06) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:06) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:06) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:09) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (2+4+6=(2*1)+3+5):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (2+4+6=(2*1)+3+5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:12) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:13) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:14) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:14) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:15) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:15) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:16) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:16) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:16) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:26) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:27) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:28) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:28) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:29) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:29) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:29) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:30) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:30) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:31) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:31) 
-- CODE:
senha = int(input())

d1 = senha//1000000
d2 = senha//100000%10
d3 = senha//10000%100
d4 = senha//1000%1000
d5 = senha//100%10000
d6 = senha/10%100000
if (d4+d6+d8=3*d3+d2+d1):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    if (d4+d6+d8=3*d3+d2+d1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:00:17) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = (senha//10)%10#1
var = ((d4+d6+d8)%(d3+d2+d1))
if (var==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var = ((d4+d6+d8)%(d3+d2+d1))
NameError: name 'd8' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:02:39) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
var = (d2+d4+d6)%(d1+d3+d5)
if (var==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:03:56) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
var = (d2+d4+d6)%(d1+d3+d5)
if (var==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:05:30) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
var = (d2+d4+d6)//(d1+d3+d5)
if (var==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:06:13) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
x = (d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:14:59) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
x = (d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:38) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
x = (d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:56) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
x = (d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:47) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = (d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:52) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = (d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:23) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:21:30) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- EXECUTION TIME:
0.193936
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
0
0
8
7
6
2
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
0
7
6
0
8
4
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
0
1
2
2
9
7
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:45) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:50) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:55) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d2+d4+d6)%(d1+d3+d5)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:23:28) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d1+d3+d5)%(d6+d2+d4)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:23:33) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d1+d3+d5)%(d6+d2+d4)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- EXECUTION TIME:
0.133491
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
0
0
8
7
6
2
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
0
7
6
0
8
4
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
0
1
2
2
9
7
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:24:03) 
-- CODE:
senha = int(input())

d1 = senha//1000000#6
d2 = (senha//100000)%10#5
d3 = (senha//10000)%10#4
d4 = (senha//1000)%10#3
d5 = (senha//100)%10#2
d6 = senha%10
print(d1)
print(d2)
print(d3)
print(d4)
print(d5)
print(d6)

x = 0#(d1+d3+d5)%(d6+d2+d4)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:26:42) 
-- CODE:
senha = int(input())

x = senha//1000000#6
y = (senha//100000)%10#5
w = (senha//10000)%10#4
z = (senha//1000)%10#3
u = (senha//100)%10#2
v = senha%10
x = (y+z+v)%(x+w+u)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:26:52) 
-- CODE:
senha = int(input())

x = senha//1000000#6
y = (senha//100000)%10#5
w = (senha//10000)%10#4
z = (senha//1000)%10#3
u = (senha//100)%10#2
v = senha%10
x = (y+z+v)%(x+w+u)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- EXECUTION TIME:
0.139038
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:26:56) 
-- CODE:
senha = int(input())

x = senha//1000000#6
y = (senha//100000)%10#5
w = (senha//10000)%10#4
z = (senha//1000)%10#3
u = (senha//100)%10#2
v = senha%10
x = (y+z+v)%(x+w+u)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:27:04) 
-- CODE:
senha = int(input())

x = senha//1000000#6
y = (senha//100000)%10#5
w = (senha//10000)%10#4
z = (senha//1000)%10#3
u = (senha//100)%10#2
v = senha%10
x = (y+z+v)%(x+w+u)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- EXECUTION TIME:
0.177788
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:28:44) 
-- CODE:
senha = int(input())

a =senha//1000000#6
b =(senha//100000)%10#5
c = (senha//10000)%10#4
d = (senha//1000)%10#3
e = (senha//100)%10#2
f = senha%10
x = (b+d+f)%(a+c+e)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:29:23) 
-- CODE:
senha = int(input())

a =senha//1000000#6
b =(senha//100000)%10#5
c = (senha//10000)%10#4
d = (senha//1000)%10#3
e = (senha//100)%10#2
f = senha%10
print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
x = (b+d+f)%(a+c+e)
if (x==0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
0
0
8
7
6
2
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
